# whatsup_assistant

./: .gitignore  README.md  agent.md  implementation.md  modal_fastapi.py  modal_llm_app.py  modal_vllm_server.py  pyproject.toml  requirements.txt  test_llama.py
data/: clients.csv
documents/: SETUP.md  architecture.md  implementation.md  logging_stdout.md  memory_persistence.md  todo.md  vllm_migration.md
src/: logging_setup.py  main.py
src/agent/: core.py  memory.py  prompts.py  test_model.py
src/services/: whatsapp.py
src/tools/: calendar.py  database.py  email.py
tests/: test_agent_memory_webhook.py  test_calendar.py  test_csv.py  test_email_smtp.py  test_memory_webhook.py  test_modal_tools.py
